Fix left alignment of span.title

--- a/wiki/src/local.css
+++ b/wiki/src/local.css
@@ -263,9 +263,6 @@ span.title {
     display: block;
     margin: 1em 0;
     color: #56347c;
-    border-left: 10px solid #444444;
-    padding-left: 35px;
-    margin-left: -28px;
 }
 
 .home-section {
